5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4058/executions/1578_1559.log
== TEST (2019-03-11 23:49:25) 
-- CODE:
frase = ""Ada Lovelace foi a primeira programadora da historia.""Ada Lovelace foi a primeira programadora da historia..upper()""
print(frase.???)
-- ERROR:
File "XXXX", line 1
    frase = ""Ada Lovelace foi a primeira programadora da historia.""Ada Lovelace foi a primeira programadora da historia..upper()""
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 23:49:31) 
-- CODE:
frase = ""Ada Lovelace foi a primeira programadora da historia.""Ada Lovelace foi a primeira programadora da historia..upper()""
print(frase.???)
-- EXECUTION TIME:
0.131133
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = ""Ada Lovelace foi a primeira programadora da historia.""Ada Lovelace foi a primeira programadora da historia..upper()""
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 19:32:32) 
-- CODE:
frase = ""Ada Lovelace foi a primeira programadora da historia.""Ada Lovelace foi a primeira programadora da historia..upper()""
print(frase.upper())
-- ERROR:
File "XXXX", line 1
    frase = ""Ada Lovelace foi a primeira programadora da historia.""Ada Lovelace foi a primeira programadora da historia..upper()""
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 19:32:53) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.""Ada Lovelace foi a primeira programadora da historia..upper()""
print(frase.upper())
-- ERROR:
File "XXXX", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia.""Ada Lovelace foi a primeira programadora da historia..upper()""
                                                                                                                                  ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 19:33:24) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:33:27) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.150562
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
